src/main/css/clinical-search.css
.clinical-heading {
    font-size: 14px;
    font-weight: bold;
}

.clinical-heading a,
.clinical-heading a:active,
.clinical-heading a:hover,
.clinical-heading a:visited {
    color: black;
}

.clinical-toggle {
    background-color: #dddedf;
    border-radius: 24px;
    font-size: 14px;
    line-height: 26px;
    margin: 9px 0 37px;
    padding: 0 26px;
    text-align: center;
}

.clinical-toggle a {
    display: block;
}

.clinical-toggle-label {
    color: #7e7f80;
}

.clinical-toggle-label-active {
    color: black;
}

.clinical-toggle .fa-solid {
    color: #3e3f40;
    font-size: 46px;
    padding: 0 18px;
    vertical-align: middle;
}

.clinical-facets {
    margin-top: 12px;
}

.clinical-facets-section {
    margin: 10px 0 20px;
}

.clinical-facets-subsection {
    margin-left: 10px;
    position: relative;
}

.clinical-facet {
    padding: 4px;
    display: block;
    border-bottom: 1px #e7e7e0 solid;
}

.clinical-facet .fa-circle {
    color: #e1e1e1;
    position: relative;
}

.clinical-facet .fa-circle::after{
    content: ' ';
    position: absolute;
    background-color: #fff;
    height: 14px;
    left: 2px;
    top: -6px;
    width: 15px;
    z-index: -1;
    border-radius: 6px;
}

.clinical-facet span {
    float: right;
}

.clinical-facet-active {
    font-weight: bold;
    color: white;
    background-color: black;
}

.clinical-facet-active .fa-solid.fa-check-circle {
    color: white;
}

